--- a/drg_group/taizhou_2022/build.xml
+++ b/drg_group/taizhou_2022/build.xml
@@ -5,7 +5,7 @@
     </target>
     <target name="compile" depends="clean">
         <mkdir dir="build/classes"/>
-        <javac srcdir="." destdir="build/classes" includeAntRuntime="false"/>
+        <javac encoding="utf-8" srcdir="." destdir="build/classes" includeAntRuntime="false"/>
     </target>
     <target name="run" depends="compile">
         <java classname="drg_group.suzhou_2022.GroupTest">
